--- a/BirdsEyeView/notebooks/Cam2BEV_dataset_helper.ipynb
+++ b/BirdsEyeView/notebooks/Cam2BEV_dataset_helper.ipynb
@@ -17,8 +17,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "import pickle\n",
+    "import cv2\n",
     "import numpy as np\n",
     "from tqdm import tqdm"
    ]
@@ -39,11 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_NUM_TO_KEEP = 10000\n",
+    "TRAIN_NUM_TO_KEEP = 7000\n",
+    "VAL_NUM_TO_KEEP = 2000\n",
     "DATA_ROOT_DIR = '/home/surya/Downloads/cam2bev-data-master/1_FRLR'\n",
     "TRAIN_DIR = os.path.join(DATA_ROOT_DIR, *['train'])\n",
-    "TRAIN_DATASET_FOLDERS = [os.path.join(TRAIN_DIR,x) for x in os.listdir(TRAIN_DIR) \\\n",
-    "                           if os.path.isdir(os.path.join(TRAIN_DIR,x))]"
+    "VAL_DIR = os.path.join(DATA_ROOT_DIR, *['val'])"
    ]
   },
   {
@@ -101,28 +100,34 @@
     "\n",
     "def deleteFile(filePath):\n",
     "    if os.path.exists(filePath):\n",
-    "        os.remove(filePath)"
+    "        os.remove(filePath)\n",
+    "\n",
+    "def reduceDataset(inputDir, numberToKeep):\n",
+    "    DATASET_FOLDERS = [os.path.join(inputDir,x) for x in os.listdir(inputDir) \\\n",
+    "                            if os.path.isdir(os.path.join(inputDir,x))]\n",
+    "\n",
+    "    refFiles = getFilesInDir(DATASET_FOLDERS[0])\n",
+    "    numRefFiles = len(refFiles)\n",
+    "\n",
+    "    # randomly choose indices to delete\n",
+    "    indicesToDelete = getRandomIndices(numRefFiles, numRefFiles - numberToKeep)\n",
+    "    filesToBeDeteled = filterListByIndices(refFiles, indicesToDelete)\n",
+    "\n",
+    "    # delete extra files\n",
+    "    for folder in DATASET_FOLDERS:\n",
+    "        print(folder)\n",
+    "        for file in tqdm(filesToBeDeteled):\n",
+    "            absFilePath = os.path.join(folder, file)\n",
+    "            deleteFile(absFilePath)\n",
+    "\n",
+    "    # check folders for files\n",
+    "    checkFoldersContainSameFiles(DATASET_FOLDERS)        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "id": "45f91784",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "refFiles = getFilesInDir(TRAIN_DATASET_FOLDERS[0])\n",
-    "refFilesWithoutExt = set(fileNamesWithoutExtension(refFiles))\n",
-    "numRefFiles = len(refFiles)\n",
-    "\n",
-    "indicesToDelete = getRandomIndices(numRefFiles, numRefFiles - TRAIN_NUM_TO_KEEP)\n",
-    "filesToBeDeteled = filterListByIndices(refFiles, indicesToDelete)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "68450e56",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +141,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████| 23199/23199 [00:00<00:00, 51734.48it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:00<00:00, 38884.63it/s]\n"
      ]
     },
     {
@@ -150,7 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████| 23199/23199 [00:00<00:00, 44341.24it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:00<00:00, 41234.63it/s]\n"
      ]
     },
     {
@@ -164,7 +169,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████| 23199/23199 [00:00<00:00, 49655.09it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:00<00:00, 40416.64it/s]\n"
      ]
     },
     {
@@ -178,7 +183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████| 23199/23199 [00:00<00:00, 44175.94it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:00<00:00, 40691.77it/s]\n"
      ]
     },
     {
@@ -192,7 +197,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████| 23199/23199 [00:00<00:00, 50613.22it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:00<00:00, 42136.02it/s]\n"
      ]
     },
     {
@@ -206,38 +211,317 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████| 23199/23199 [00:00<00:00, 48131.50it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:00<00:00, 35724.58it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/val/left\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1731/1731 [00:00<00:00, 44954.28it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/val/right\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1731/1731 [00:00<00:00, 43735.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/val/front\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1731/1731 [00:00<00:00, 42032.88it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/val/rear\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1731/1731 [00:00<00:00, 42927.32it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/val/bev+occlusion\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1731/1731 [00:00<00:00, 42196.32it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/val/homography\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1731/1731 [00:00<00:00, 39895.05it/s]\n"
      ]
     }
    ],
    "source": [
-    "for folder in TRAIN_DATASET_FOLDERS:\n",
-    "    print(folder)\n",
-    "    for file in tqdm(filesToBeDeteled):\n",
-    "        absFilePath = os.path.join(folder, file)\n",
-    "        deleteFile(absFilePath)"
+    "reduceDataset(TRAIN_DIR, numberToKeep=TRAIN_NUM_TO_KEEP)\n",
+    "reduceDataset(VAL_DIR, numberToKeep=VAL_NUM_TO_KEEP)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "id": "68450e56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def resizeDataset(inputDir, newWidth, newHeight):\n",
+    "    DATASET_FOLDERS = [os.path.join(inputDir,x) for x in os.listdir(inputDir) \\\n",
+    "                            if os.path.isdir(os.path.join(inputDir,x))]\n",
+    "\n",
+    "    for folder in DATASET_FOLDERS:\n",
+    "        print(folder)\n",
+    "        filesInDir = getFilesInDir(folder)\n",
+    "        for file in tqdm(filesInDir):\n",
+    "            absFilePath = os.path.join(folder, file)\n",
+    "            image = cv2.imread(absFilePath)\n",
+    "            image = cv2.resize(image, (newWidth, newHeight), interpolation=cv2.INTER_CUBIC)\n",
+    "            cv2.imwrite(absFilePath, image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "313e7631",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/train/left\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 7000/7000 [00:56<00:00, 124.51it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/train/right\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 7000/7000 [00:55<00:00, 125.61it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/train/front\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 7000/7000 [00:57<00:00, 121.93it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/train/rear\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 7000/7000 [00:57<00:00, 122.31it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/train/bev+occlusion\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 7000/7000 [00:57<00:00, 122.65it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/train/homography\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 7000/7000 [00:58<00:00, 120.48it/s]\n"
+     ]
     }
    ],
    "source": [
-    "checkFoldersContainSameFiles(TRAIN_DATASET_FOLDERS)"
+    "resizeDataset(TRAIN_DIR, newWidth=512, newHeight=256)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5d994464",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/val/left\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2000/2000 [00:16<00:00, 121.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/val/right\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2000/2000 [00:16<00:00, 123.58it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/val/front\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2000/2000 [00:16<00:00, 121.59it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/val/rear\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2000/2000 [00:16<00:00, 122.33it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/val/bev+occlusion\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2000/2000 [00:16<00:00, 122.96it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/val/homography\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2000/2000 [00:16<00:00, 120.03it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "resizeDataset(VAL_DIR, newWidth=512, newHeight=256)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87b73e0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
