Fixed bug in class distribution computation

--- a/BirdsEyeView/notebooks/Cam2BEV_dataset_helper.ipynb
+++ b/BirdsEyeView/notebooks/Cam2BEV_dataset_helper.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "63ce4fd4",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6bdb4237",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "22729047",
    "metadata": {},
    "outputs": [],
@@ -189,109 +189,8 @@
     "            absFilePath = os.path.join(folder, file)\n",
     "            image = cv2.imread(absFilePath)\n",
     "            image = cv2.resize(image, (newWidth, newHeight), interpolation=cv2.INTER_CUBIC)\n",
-    "            cv2.imwrite(absFilePath, image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b7de6a85",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/train/left\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████| 2000/2000 [00:00<00:00, 16387.23it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/train/right\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████| 2000/2000 [00:00<00:00, 16212.16it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/train/front\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████| 2000/2000 [00:00<00:00, 15472.48it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/train/rear\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████| 2000/2000 [00:00<00:00, 15377.33it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/surya/Downloads/cam2bev-data-master/1_FRLR/train/bev+occlusion\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████| 2000/2000 [00:00<00:00, 23149.61it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "reduceDataset(TRAIN_DIR, numberToKeep=TRAIN_NUM_TO_KEEP)\n",
-    "# reduceDataset(VAL_DIR, numberToKeep=VAL_NUM_TO_KEEP, reduceType='last')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45f91784",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resizeDataset(TRAIN_DIR, newWidth=512, newHeight=256)\n",
-    "resizeDataset(VAL_DIR, newWidth=512, newHeight=256)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48a44e60",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            cv2.imwrite(absFilePath, image)\n",
+    "            \n",
     "def replaceWithOhEncoding(inputDir, labelDir, inputColorMap, outputColorMap):\n",
     "    DATASET_FOLDERS = [os.path.join(inputDir,x) for x in os.listdir(inputDir) \\\n",
     "                            if os.path.isdir(os.path.join(inputDir,x))]\n",
@@ -310,49 +209,57 @@
     "            absFilePath = os.path.join(folder, file)\n",
     "            image = load_image(absFilePath)\n",
     "            image = one_hot_encode_image(image, colorMap).astype(np.bool_)\n",
-    "            np.save(absFilePath.replace('png', 'npy'), image)"
+    "            np.save(absFilePath.replace('png', 'npy'), image)            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e0881f05",
+   "execution_count": 5,
+   "id": "b7de6a85",
    "metadata": {},
    "outputs": [],
    "source": [
-    "replaceWithOhEncoding(TRAIN_DIR, labelDir='bev+occlusion', \n",
-    "                      inputColorMap=inputPalette, outputColorMap=outputPalette)"
+    "# reduceDataset(TRAIN_DIR, numberToKeep=TRAIN_NUM_TO_KEEP)\n",
+    "# reduceDataset(VAL_DIR, numberToKeep=VAL_NUM_TO_KEEP, reduceType='last')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "564152de",
+   "execution_count": 6,
+   "id": "45f91784",
    "metadata": {},
    "outputs": [],
    "source": [
-    "replaceWithOhEncoding(VAL_DIR, labelDir='bev+occlusion',\n",
-    "                      inputColorMap=inputPalette, outputColorMap=outputPalette)"
+    "# resizeDataset(TRAIN_DIR, newWidth=512, newHeight=256)\n",
+    "# resizeDataset(VAL_DIR, newWidth=512, newHeight=256)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "7cbb78e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replaceWithOhEncoding(TRAIN_DIR, labelDir='bev+occlusion', \n",
+    "#                       inputColorMap=inputPalette, outputColorMap=outputPalette)\n",
+    "# replaceWithOhEncoding(VAL_DIR, labelDir='bev+occlusion',\n",
+    "#                       inputColorMap=inputPalette, outputColorMap=outputPalette)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "9fac3e70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_class_distribution(folder, palette):\n",
+    "def get_class_distribution(folder, palette, shape=(256, 512)):\n",
     "    # get filepaths\n",
     "    files = [os.path.join(folder, f) for f in os.listdir(folder) if not f.startswith(\".\")]\n",
     "    n_classes = len(palette)\n",
     "\n",
-    "    def get_img(file, interpolation=cv2.INTER_NEAREST):\n",
-    "        img = load_image(file)\n",
-    "        img = one_hot_encode_image(img, palette)\n",
-    "        return img\n",
-    "\n",
-    "    px = 256 * 512\n",
+    "    px = shape[0] * shape[1]\n",
     "    distribution = {}\n",
     "    for k in range(n_classes):\n",
     "        distribution[str(k)] = 0\n",
@@ -360,8 +267,8 @@
     "    i = 0\n",
     "    bar = tqdm(files)\n",
     "    for f in bar:\n",
-    "        img = get_img(f)\n",
-    "        classes = np.argmax(img, axis=-1)\n",
+    "        img = np.load(f)\n",
+    "        classes = np.argmax(img, axis=0)\n",
     "        unique, counts = np.unique(classes, return_counts=True)\n",
     "        occs = dict(zip(unique, counts))\n",
     "        \n",
@@ -376,12 +283,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "063710cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█| 8000/8000 [00:46<00:00, 173.07it/s, 0=0.356, 1=0.0861, 2=1.31e-5, 3=0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_dist = get_class_distribution(os.path.join(TRAIN_DIR, *['bev+occlusion']), outputPalette)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "92b46b41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0': 0.3556033468246461,\n",
+       " '1': 0.08613118267059312,\n",
+       " '2': 1.3116836547851552e-05,\n",
+       " '3': 0.006396475791931152,\n",
+       " '4': 0.0007524662017822255,\n",
+       " '5': 0.0002047157287597655,\n",
+       " '6': 5.084991455078126e-06,\n",
+       " '7': 0.10540112304687486,\n",
+       " '8': 0.38432099819183363,\n",
+       " '9': 0.0611714897155762}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "77e4c8cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get_class_distribution(os.path.join(TRAIN_DIR, *['bev+occlusion']), outputPalette)"
+    "np.set_printoptions(suppress=True, precision=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1cb64825",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classCounts = np.array(list(class_dist.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f16404d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([35.560335,  8.613118,  0.001312,  0.639648,  0.075247,  0.020472,\n",
+       "        0.000508, 10.540112, 38.4321  ,  6.117149])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classCounts * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9ad6b53a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(classCounts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "25d21f95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00001 , 0.000042, 0.272953, 0.00056 , 0.004758, 0.017489,\n",
+       "       0.704087, 0.000034, 0.000009, 0.000059])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1 / classCounts)/ np.sum(1 / classCounts)"
    ]
   }
  ],
