Modified 2_F dataset to oh encoding

--- a/BirdsEyeView/notebooks/Cam2BEV_dataset_helper.ipynb
+++ b/BirdsEyeView/notebooks/Cam2BEV_dataset_helper.ipynb
@@ -20,8 +20,8 @@
     "import sys\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
-    "sys.path.append('/home/surya/Downloads/cam2bev-data-master/')\n",
-    "from utils import load_image, one_hot_encode_image"
+    "sys.path.append('/home/surya/Downloads/cam2bev-data-master-2_F/')\n",
+    "from utils import load_image, one_hot_encode_image, parse_convert_xml"
    ]
   },
   {
@@ -40,8 +40,9 @@
    "outputs": [],
    "source": [
     "TRAIN_NUM_TO_KEEP = 8000\n",
-    "VAL_NUM_TO_KEEP = 500\n",
-    "DATA_ROOT_DIR = '/home/surya/Downloads/cam2bev-data-master/1_FRLR'\n",
+    "VAL_NUM_TO_KEEP = 1500\n",
+    "# DATA_ROOT_DIR = '/home/surya/Downloads/cam2bev-data-master/1_FRLR'\n",
+    "DATA_ROOT_DIR = '/home/surya/Downloads/cam2bev-data-master-2_F/2_F'\n",
     "TRAIN_DIR = os.path.join(DATA_ROOT_DIR, *['train'])\n",
     "VAL_DIR = os.path.join(DATA_ROOT_DIR, *['val'])"
    ]
@@ -72,7 +73,7 @@
     "\n",
     "\n",
     "# Sky is added to Static obstacles and Occlusion is added as 10th class\n",
-    "outputPalette = [\n",
+    "FLRR_outputPalette = [\n",
     "    [np.array([128,  64, 128])],\n",
     "    [np.array([244,  35, 232]), np.array([250, 170, 160])],\n",
     "    [np.array([255,   0,   0])],\n",
@@ -87,6 +88,21 @@
     "     np.array([250, 170,  30]), np.array([220, 220,   0]), np.array([  0,  80, 100]), np.array([ 70, 130, 180])],\n",
     "    [np.array([107, 142,  35]), np.array([152, 251, 152])], \n",
     "    [np.array([150, 150, 150])]              # OCCLUSION CLASS\n",
+    "]\n",
+    "\n",
+    "F_outputPallete = [\n",
+    "            [np.array([128,  64, 128])],\n",
+    "            [np.array([  0,   0, 142]), np.array([  0,   0, 110]), np.array([ 0,  0, 70]),\n",
+    "             np.array([  0,  60, 100]), np.array([ 0,  0, 90]), np.array([220,  20,  60]),\n",
+    "             np.array([  0,   0, 230]), np.array([119,  11,  32])],\n",
+    "            [np.array([0, 0, 0]), np.array([255,   0,   0]), np.array([244,  35, 232]),\n",
+    "             np.array([250, 170, 160]), np.array([111,  74,   0]), np.array([81,  0, 81]),\n",
+    "             np.array([230, 150, 140]), np.array([70, 70, 70]), np.array([102, 102, 156]),\n",
+    "             np.array([190, 153, 153]), np.array([180, 165, 180]), np.array([150, 100, 100]),\n",
+    "             np.array([150, 120,  90]), np.array([153, 153, 153]), np.array([153, 153, 153]),\n",
+    "             np.array([250, 170,  30]), np.array([220, 220,   0]), np.array([  0,  80, 100]),\n",
+    "             np.array([107, 142,  35]), np.array([152, 251, 152]), np.array([ 70, 130, 180])],\n",
+    "            [np.array([150, 150, 150])]\n",
     "]"
    ]
   },
@@ -217,39 +233,77 @@
    "execution_count": 5,
    "id": "b7de6a85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master-2_F/2_F/val/front\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1672/1672 [00:00<00:00, 13584.69it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master-2_F/2_F/val/bev+occlusion\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1672/1672 [00:00<00:00, 17808.53it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# reduceDataset(TRAIN_DIR, numberToKeep=TRAIN_NUM_TO_KEEP)\n",
-    "# reduceDataset(VAL_DIR, numberToKeep=VAL_NUM_TO_KEEP, reduceType='last')"
+    "reduceDataset(VAL_DIR, numberToKeep=VAL_NUM_TO_KEEP, reduceType='last')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "45f91784",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# resizeDataset(TRAIN_DIR, newWidth=512, newHeight=256)\n",
-    "# resizeDataset(VAL_DIR, newWidth=512, newHeight=256)"
+    "resizeDataset(TRAIN_DIR, newWidth=512, newHeight=256)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "0aa22aae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resizeDataset(VAL_DIR, newWidth=512, newHeight=256)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7cbb78e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# replaceWithOhEncoding(TRAIN_DIR, labelDir='bev+occlusion', \n",
-    "#                       inputColorMap=inputPalette, outputColorMap=outputPalette)\n",
-    "# replaceWithOhEncoding(VAL_DIR, labelDir='bev+occlusion',\n",
-    "#                       inputColorMap=inputPalette, outputColorMap=outputPalette)"
+    "replaceWithOhEncoding(TRAIN_DIR, labelDir='bev+occlusion', \n",
+    "                      inputColorMap=inputPalette, outputColorMap=F_outputPallete)\n",
+    "replaceWithOhEncoding(VAL_DIR, labelDir='bev+occlusion',\n",
+    "                      inputColorMap=inputPalette, outputColorMap=F_outputPallete)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9fac3e70",
    "metadata": {},
    "outputs": [],
@@ -283,55 +337,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "063710cb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█| 8000/8000 [00:46<00:00, 173.07it/s, 0=0.356, 1=0.0861, 2=1.31e-5, 3=0.00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class_dist = get_class_distribution(os.path.join(TRAIN_DIR, *['bev+occlusion']), outputPalette)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "92b46b41",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'0': 0.3556033468246461,\n",
-       " '1': 0.08613118267059312,\n",
-       " '2': 1.3116836547851552e-05,\n",
-       " '3': 0.006396475791931152,\n",
-       " '4': 0.0007524662017822255,\n",
-       " '5': 0.0002047157287597655,\n",
-       " '6': 5.084991455078126e-06,\n",
-       " '7': 0.10540112304687486,\n",
-       " '8': 0.38432099819183363,\n",
-       " '9': 0.0611714897155762}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class_dist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "77e4c8cd",
    "metadata": {},
    "outputs": [],
@@ -341,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "1cb64825",
    "metadata": {},
    "outputs": [],
@@ -351,65 +377,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "f16404d1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([35.560335,  8.613118,  0.001312,  0.639648,  0.075247,  0.020472,\n",
-       "        0.000508, 10.540112, 38.4321  ,  6.117149])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "classCounts * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "9ad6b53a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.sum(classCounts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "25d21f95",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.00001 , 0.000042, 0.272953, 0.00056 , 0.004758, 0.017489,\n",
-       "       0.704087, 0.000034, 0.000009, 0.000059])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(1 / classCounts)/ np.sum(1 / classCounts)"
    ]
