--- a/BirdsEyeView/notebooks/Cam2BEV_dataset_helper.ipynb
+++ b/BirdsEyeView/notebooks/Cam2BEV_dataset_helper.ipynb
@@ -34,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "63ce4fd4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_NUM_TO_KEEP = 8000\n",
+    "TRAIN_NUM_TO_KEEP = 22000\n",
     "VAL_NUM_TO_KEEP = 1500\n",
     "# DATA_ROOT_DIR = '/home/surya/Downloads/cam2bev-data-master/1_FRLR'\n",
     "DATA_ROOT_DIR = '/home/surya/Downloads/cam2bev-data-master-2_F/2_F'\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b7de6a85",
    "metadata": {},
    "outputs": [
@@ -238,34 +238,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/surya/Downloads/cam2bev-data-master-2_F/2_F/val/front\n"
+      "/home/surya/Downloads/cam2bev-data-master-2_F/2_F/train/front\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1672/1672 [00:00<00:00, 13584.69it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:00<00:00, 16815.78it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/surya/Downloads/cam2bev-data-master-2_F/2_F/val/bev+occlusion\n"
+      "/home/surya/Downloads/cam2bev-data-master-2_F/2_F/train/bev+occlusion\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1672/1672 [00:00<00:00, 17808.53it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:00<00:00, 21128.75it/s]\n"
      ]
     }
    ],
    "source": [
-    "# reduceDataset(TRAIN_DIR, numberToKeep=TRAIN_NUM_TO_KEEP)\n",
-    "reduceDataset(VAL_DIR, numberToKeep=VAL_NUM_TO_KEEP, reduceType='last')"
+    "reduceDataset(TRAIN_DIR, numberToKeep=TRAIN_NUM_TO_KEEP)\n",
+    "# reduceDataset(VAL_DIR, numberToKeep=VAL_NUM_TO_KEEP, reduceType='last')"
    ]
   },
   {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aa22aae",
+   "id": "339dff57",
    "metadata": {},
    "outputs": [],
    "source": [
